# sparkles

./: .gitignore  .projections.json  CMakeLists.txt  README.md  conanfile.txt
inc/: Agents.h  Canvas.h  Shader.h
shaders/: shader.frag  shader.vert
src/: Agents.cpp  Canvas.cpp  Shader.cpp  Window.cpp  main.cpp
